fix: align-context fix

--- a/src/features/shopping-card-list/shoppingCardList.module.css
+++ b/src/features/shopping-card-list/shoppingCardList.module.css
@@ -1,7 +1,7 @@
 .cardList {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   gap: 10px;
   margin-top: 20px;
